# Coderbuddy

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  run.py  start.py  test_api.py  test_frontend.py  verify_rendering.py  verify_zip.py
agent/: generator.py  graph.py  tools.py
frontend/: index.html  script.js  styles.css
static/: index.html  script.js  styles.css
